k8s/atbbs/workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atbbs-telnet
  namespace: atbbs
  labels:
    app: atbbs-telnet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atbbs-telnet
  template:
    metadata:
      labels:
        app: atbbs-telnet
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
        - name: atbbs-telnet
          image: ghcr.io/alyraffauf/atbbs-telnet:latest@sha256:f4433f3041d605973ff086144252074be5d9b69360e4e62e8b8dcc5b12d9a4d5
          ports:
            - name: telnet
              containerPort: 2323
          readinessProbe:
            tcpSocket:
              port: telnet
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: atbbs-telnet
  namespace: atbbs
spec:
  selector:
    app: atbbs-telnet
  ports:
    - name: telnet
      port: 2323
      targetPort: telnet
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: atbbs-telnet
  namespace: atbbs
spec:
  entryPoints:
    - telnet
  routes:
    - match: HostSNI(`*`)
      services:
        - name: atbbs-telnet
          port: 2323

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atbbs-web
  namespace: atbbs
  labels:
    app: atbbs-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: atbbs-web
  template:
    metadata:
      labels:
        app: atbbs-web
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      topologySpreadConstraints:
        - maxSkew: 1
          minDomains: 2
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: atbbs-web
      containers:
        - name: atbbs-web
          image: ghcr.io/alyraffauf/atbbs:latest@sha256:6309f2e7c175fe8eb21a111b1ff9441482391310ab01d1156b7a1b7b19db2d39
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
---
apiVersion: v1
kind: Service
metadata:
  name: atbbs-web
  namespace: atbbs
spec:
  selector:
    app: atbbs-web
  ports:
    - name: http
      port: 80
      targetPort: http
